--- a/Slider/slider.html
+++ b/Slider/slider.html
@@ -478,7 +478,7 @@
 
     <footer>
    <div id="fluid" class="container-fluid">
-    <div  class="row justify-content-center align-items-center g-2">
+    <div  class="row">
         <div id="foot1" class="col-lg-3 col-md-6 col-sm-12">
             <h3 style="color: azure;font-weight: bolder; padding-left: 10px;">Slider Revolution</h3>
             <ul class="menu" class="unstyled" >
@@ -537,7 +537,7 @@
 
 
    </div>
-   <div id="Final" class="container-fluid">
+   <div id="Final">
   <ul class="list-unstyled">
     <li><img id="your" src="images/youtube (1).png" class="img-fluid rounded-top" alt=""></li>
     <li><img id="your" src="images/facebook.png" class="img-fluid rounded-top" alt=""></li>
@@ -551,10 +551,10 @@
   <h5 style="float: right; color: white; font-weight: bold;margin-top: -40px;margin-right: 20px; ">Copyright 2023 by ThemePunch OHG</h5>
 
 
-    </footer>
+    
     <!-- jamshid Stop -->
 
-
+</footer>
 
 </body>
 
